fix: clean up css to remove overflow hidden

--- a/src/app/landing/LandingPage.css
+++ b/src/app/landing/LandingPage.css
@@ -17,7 +17,7 @@
 .LandingPage .Intro {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .LandingPage .IntroTitle {
@@ -39,14 +39,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around ;
   align-items: center;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),url('/img/landing_page/top1_desktop.jpg') no-repeat center center fixed;
   background-position: 30% 0%;
   background-size: cover;
   color: #FFFFFF;
-  padding: 15vh 0px 15vh 0px;
-  overflow: hidden;
 }
 
 .LandingPage .IntroBody > .IntroTop > h1 {
